test/compile_errors/err_tool_capability_field_access.w
//! expect-error: tool capability fields are private

use std.build

fn leak(ctx: BuildCtx) -> str:
    ctx.token
